[package]
name = "local-llm-client"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.0"
clap = { version = "4.5.11", features = ["derive"] }
device_query = "2.1.0"
enigo = "0.2.1"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "fs", "net", "time"] }
tokio-util = { version = "0.7.11", features = ["io", "io-util"] }
